# scientific-calculator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  deploy.yaml  main.cpp
facade/: CalculatorFacade.cpp  CalculatorFacade.hpp
factory/: OperationFactory.cpp  OperationFactory.hpp
manager/: OperationManager.cpp  OperationManager.hpp
operations/: FactorialOperation.cpp  FactorialOperation.hpp  IOperation.hpp  LnOperation.cpp  LnOperation.hpp  PowerOperation.cpp  PowerOperation.hpp  SqrtOperation.cpp  SqrtOperation.hpp
tests/: test_calculator.cpp
